# defectpl

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  README.rst  environment.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  search.html  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
api/: index.html
api/constants/: index.html
api/defect_utils/: index.html
api/ks_analysis/: index.html
api/participation_ratio/: index.html
api/phonon/: index.html
api/photoluminescence/: index.html
api/plot/: index.html
api/utils/: index.html
api/vasp/: index.html
api_reference/: index.html
benchmark/: index.html
changelog/: index.html
cite/: index.html
command_line_interface/: index.html
conda_forge/: README.md  meta.yaml
contributing/: index.html
data/NV_diamond/: README.md  build.sh
defectpl/: README.md  README.rst  __init__.py  ccd.py  cli.py  constants.py  data.py  defect_utils.py  defectpl.mplstyle  defectpl.py  io.py  ks_analysis.py  participation_ratio.py  phonon.py  plot.py  pyproject.toml  utils.py  vasp.py  vasp_wrapper.py
defectpl/core/: __init__.py  structures.py  types.py
defectpl/defectpl/: 1d_vib_spectra.py  __init__.py  comparepl.py  defectpl.py  utils.py  vibspectra1d.py
defectpl/examples/: 1d_vib_spectra_example.ipynb  diamond.py  lineshape.json
defectpl/io/: __init__.py  abinit.py  base.py  cp2k.py  qe.py  vasp.py  wavecar.py
defectpl/old/: constants.py  defectpl.py  vibspectra1d.py
defectpl/old_defectpl/: ccd.py  defectpl.mplstyle  plot.py  utils.py
defectpl/physics/: __init__.py  lineshape.py  participation_ratio.py  phonon.py  tdm.py  tdm_viz.py
defectpl/scripts/: README.md  ksplot.py
defectpl/tests/: test_defectpl.py
dev_notes/: index.html
development/: development.ipynb  properties.json
development/hBN_data/: phonopy.yaml  phonopy_disp.yaml
docs/: api_reference.md  benchmark.md  changelog.md  cite.md  command_line_interface.md  contributing.md  dev_notes.md  getting_started.md  index.md  installation.md  participation_ratio.md  plots_gallery.md  theory.md  tutorials.md  usage.md
docs/api/: constants.md  defect_utils.md  index.md  ks_analysis.md  participation_ratio.md  phonon.md  photoluminescence.md  plot.md  utils.md  vasp.md
docs/plots/: generate_plots.py  important_properties.txt
docs/stylesheets/: extra.css
docs/theory/: configuration_coordinate.md  defect_calculations.md  index.md  participation_ratio.md  phonons.md  photoluminescence.md  selection_rule.md
docs/tutorials/: 1d_lineshape.md  displacement_mode.md  force_mode.md  index.md  participation_ratio.md  tdm_wavecar.md
examples/: diamond.py
examples/NV_diamond/: gallery_frac_hse06_out.md  gallery_frac_pbe_out.md  gallery_hse06_out.md  gallery_pbe_out.md  pl_example_summary.py  pl_plot_summary.py  pl_summary_table.csv  pl_summary_table.md  plot_summary.md  run_pl_examples.py
examples/tmp_ccd/: ccd_run.ipynb  (+4 more)
getting_started/: index.html
installation/: index.html
javascripts/: mathjax.js
participation_ratio/: index.html
plots/: generate_plots.py  important_properties.txt
plots_gallery/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  test_cli.py  test_constants.py  test_defectpl.py  test_ks_analysis.py  test_participation_ratio.py  test_phonon.py  test_plot.py  test_pr_plots.py  test_tdm.py  test_utils.py  test_vasp.py  test_wavecar_io.py
theory/: index.html
tutorials/: index.html
usage/: index.html
(+119 files in other folders)
