[tool.poetry]
name = "defectpl"
version = "0.2.0"
description = "A unified package for optical properties of point defects."
authors = ["Shibu Meher <shibumeher@iisc.ac.in>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Shibu778/defectpl"
repository = "https://github.com/Shibu778/defectpl"
documentation = "https://Shibu778.github.io/defectpl/"
keywords = ["defects", "optical properties", "point defects", "DFT", "VASP", "pymatgen"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.2"
numpy = "^2.1.2"
pymatgen-core = "^2026.5.18"
pymatgen = "^2026.5.4"
click = "^8.1.7"
phonopy = "^2.35.0"
matplotlib = "^3.8.0"
monty = "^2026.5.18"

[tool.poetry.group.dev.dependencies]
pdoc3 = "^0.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
defectpl = 'defectpl.cli:main'