[tool.poetry]
name = "defectpl"
version = "0.3.0"
description = "A unified Python package for the optical properties of point defects in solids."
authors = ["Shibu Meher <shibumeher@iisc.ac.in>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Shibu778/defectpl"
repository = "https://github.com/Shibu778/defectpl"
documentation = "https://Shibu778.github.io/defectpl/"
keywords = ["defects", "optical properties", "point defects", "DFT", "VASP", "QE", "ABINIT", "CP2K", "multi-code"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.11"
pyyaml = ">=6.0.2"
numpy = ">=2.0.0"
click = ">=8.1.7"
matplotlib = ">=3.8.0"
plotly = ">=5.18.0"
monty = ">=2024.7.30"
pymatgen = { version = ">=2024.7.30", optional = true }
pymatgen-core = { version = ">=2.3.0", optional = true }
phonopy = { version = ">=2.3.0", optional = true }

[tool.poetry.extras]
vasp = ["pymatgen", "pymatgen-core"]
phonon = ["phonopy"]
all = ["pymatgen", "pymatgen-core", "phonopy"]

[tool.poetry.group.dev.dependencies]
pdoc3 = "^0.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["defectpl/old_defectpl"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]
"defectpl/plot.py" = ["E741"]   # I is the standard physics symbol for intensity

[tool.poetry.scripts]
defectpl = 'defectpl.cli:main'
